# hf_agent

./: README.md  pyproject.toml
agent_langgraph/email_process_agent/: email_agent.py  readme.md
utils/: config.py  local_test.py  ollama.py
